fix(custom.css): speed up item-price-card animation
This helps hide the blurry text during the animation.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -90,7 +90,7 @@ source: https://uiverse.io/Pradeepsaranbishnoi/jolly-robin-0 */
   top: 50%;
 }
 
-.toogle input:checked~.label {
+.toggle input:checked~.label {
   color: rgba(255,0,0,0.8);
 }
 
@@ -161,10 +161,10 @@ source: https://uiverse.io/Pradeepsaranbishnoi/jolly-robin-0 */
 .item-price-card {
   box-sizing: border-box;
   border: 1px solid white;
-  backdrop-filter: blur(6px);
+  /*backdrop-filter: blur(6px);*/
   border-radius: 17px;
   cursor: pointer;
-  transition: all 0.5s;
+  transition: all 0.1s;
 
 }
 
@@ -178,3 +178,4 @@ source: https://uiverse.io/Pradeepsaranbishnoi/jolly-robin-0 */
 .item-price-card:active {
   transform: scale(0.97) rotateZ(1.7deg);
 }
+
